--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,113 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  background-color: #22202f;
+  background-image: url('../src/Images/texture-bg.png');
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* font-size: calc(10px + 2vmin); */
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+*, ::before, ::after {
+  box-sizing: inherit;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+hr {
+  border-top: 1px solid #554c88;
+}
+
+a {
+  color: #7fff00;
+}
+
+.hover-animate {
+  transition: transform ease-in-out .2s;
+}
+
+.hover-animate:hover {
+  transform: scale(1.1);
+}
+
+select, input {
+  padding: .3em;
+  width: 100%;
+}
+
+#section .content {
+  min-height: 90%;
+  min-height: 90vh;
+  display: flex;
+  align-items: center;
+}
+
+.container {
+  padding: 2px 16px;
+}
+
+.btn {
+  background-color: #6a5acd;
+  border: 1px solid transparent;
+  color: white;
+  font-weight: bold;
+  border-radius: .475rem;
+  padding: .4em;
+  margin: 1.25em 0;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #403b62;
+}
+
+.container-iframe {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%;
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
+iframe {
+  border: 0;
+  border-radius: .2rem;
+}
+
+.table-responsive {
+  display: block;
+  width: 100%;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
+.table {
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 1rem;
+  background-color: transparent;
+  border-collapse: collapse;
+}
+
+.table td, .table th {
+  padding: .5rem;
+  vertical-align: top;
+  border-top: 1px solid #6F6F6F;
+}
+
+.table .thead-light th {
+  color: #495057;
+  background-color: #e9ecef;
+  border-color: #dee2e6;
+}
+
+.table-hover tbody tr:hover {
+  background-color: rgba(0, 0, 0, .075);
 }
