--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -12,12 +12,7 @@
     font-size: .9em;
 }
 
-#nav ul {
-    margin: 0;
-    padding: 0;
-}
-
-#nav ul li {
+#nav .nav li {
     list-style: none;
 }
 
@@ -31,6 +26,10 @@
     justify-content: center;
 }
 
+.nav {
+    margin: auto;
+}
+
 #nav ul li {
     padding: .5em;
 }
@@ -41,19 +40,149 @@
     color: white;
     text-align: center;
     text-decoration: none;
-    /* border-bottom: 2px solid transparent;
-    border-top: 2px solid transparent; */
+    border-bottom: 2px solid transparent;
+    border-top: 2px solid transparent;
     align-self: center;
-    padding: .5em .75em;
-    margin: 0.5em 0;
-    border-radius: 0.475rem;
-    transition: ease-in-out .2s;
+    padding: .8em;
+}
+
+#nav .nav-link:hover {
+    background-color: slateblue;
 }
 
 #nav .nav-link.active {
     background-color: slateblue;
-    /* border-bottom: 2px solid white; */
+    border-bottom: 2px solid white;
 }
-#nav .nav-link.home {
-    background-color: coral !important;
+
+/* BOOTSTRAP TOGGLER*/
+
+.fade {
+    transition: opacity 0.15s linear;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    .fade {
+        transition: none;
+    }
+}
+
+.fade:not(.show) {
+    opacity: 0;
+}
+
+.collapse:not(.show) {
+    display: none;
+}
+
+.collapsing {
+    height: 0;
+    overflow: hidden;
+    transition: height 0.35s ease;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    .collapsing {
+        transition: none;
+    }
+}
+
+.collapsing.collapse-horizontal {
+    width: 0;
+    height: auto;
+    transition: width 0.35s ease;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    .collapsing.collapse-horizontal {
+        transition: none;
+    }
+}
+
+@media (min-width: 992px) {
+    .navbar-expand-lg {
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+    }
+    .navbar-expand-lg .navbar-nav {
+        flex-direction: row;
+    }
+    .navbar-expand-lg .navbar-nav .dropdown-menu {
+        position: absolute;
+    }
+    .navbar-expand-lg .navbar-nav .nav-link {
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
+    }
+    .navbar-expand-lg .navbar-nav-scroll {
+        overflow: visible;
+    }
+    .navbar-expand-lg .navbar-collapse {
+        display: flex !important;
+        flex-basis: auto;
+    }
+    .navbar-expand-lg .navbar-toggler {
+        display: none;
+    }
+    .navbar-expand-lg .offcanvas-header {
+        display: none;
+    }
+    .navbar-expand-lg .offcanvas {
+        position: inherit;
+        bottom: 0;
+        z-index: 1000;
+        flex-grow: 1;
+        visibility: visible !important;
+        background-color: transparent;
+        border-right: 0;
+        border-left: 0;
+        transition: none;
+        transform: none;
+    }
+    .navbar-expand-lg .offcanvas-top, .navbar-expand-lg .offcanvas-bottom {
+        height: auto;
+        border-top: 0;
+        border-bottom: 0;
+    }
+    .navbar-expand-lg .offcanvas-body {
+        display: flex;
+        flex-grow: 0;
+        padding: 0;
+        overflow-y: visible;
+    }
+}
+
+.navbar-toggler {
+    padding: 0.25rem 0.75rem;
+    font-size: 1.25rem;
+    background-color: #6a5acd;
+    border: 1px solid transparent;
+    transition: box-shadow 0.15s ease-in-out;
+    cursor: pointer;
+    color: white;
+}
+
+@media (prefers-reduced-motion: reduce) {
+    .navbar-toggler {
+        transition: none;
+    }
+}
+
+.navbar-toggler:hover {
+    text-decoration: none;
+}
+
+.navbar-toggler:focus {
+    text-decoration: none;
+    outline: 0;
+}
+
+.navbar-toggler-icon {
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    vertical-align: middle;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
 }
